# fz-cli

./: .gitignore  CLAUDE.md  LICENSE  README.md  SUBMITTAL_REVIEW_SYSTEM.md  TEST_PLAN.md  pyproject.toml
.github/workflows/: publish.yml
src/fz_cli/: __init__.py  client.py  config.py  constants.py  errors.py  main.py  output.py  upload.py
src/fz_cli/auth/: __init__.py  browser.py  credentials.py  m2m.py  token.py
src/fz_cli/commands/: api_keys.py  auth.py  batch.py  documents.py  extract.py  extractions.py  init.py  mcp.py  projects.py  prompts.py  runs.py  schemas.py  search.py  uploads.py  webhooks.py  workspaces.py
tests/: conftest.py  test_client.py  test_upload_engine.py
tests/test_commands/: test_api_keys.py  test_batch.py  test_documents.py  test_extract.py  test_extractions.py  test_init.py  test_m2m_auth.py  test_mcp.py  test_projects.py  test_prompts.py  test_runs.py  test_schemas.py  test_search.py  test_token.py  test_uploads.py  test_webhooks.py  test_workspaces.py
